crates/macro/ui-tests/invalid-methods.stderr
error: inherent impls cannot be default
 --> ui-tests/invalid-methods.rs:7:14
  |
7 | default impl A {}
  | -------      ^ inherent impl for this type
  | |
  | default because of this
  |
  = note: only trait implementations may be annotated with `default`

error[E0197]: inherent impls cannot be unsafe
  --> ui-tests/invalid-methods.rs:10:13
   |
10 | unsafe impl A {}
   | ------      ^ inherent impl for this type
   | |
   | unsafe because of this
   |
   = note: only trait implementations may be annotated with `unsafe`

error: #[wasm_bindgen] default impls are not supported
 --> ui-tests/invalid-methods.rs:7:1
  |
7 | default impl A {}
  | ^^^^^^^

error: #[wasm_bindgen] unsafe impls are not supported
  --> ui-tests/invalid-methods.rs:10:1
   |
10 | unsafe impl A {}
   | ^^^^^^

error: #[wasm_bindgen] trait impls are not supported
  --> ui-tests/invalid-methods.rs:13:6
   |
13 | impl Clone for A {}
   |      ^^^^^

error: #[wasm_bindgen] generic impls aren't supported
  --> ui-tests/invalid-methods.rs:16:5
   |
16 | impl<T> A {}
   |     ^^^

error: unsupported self type in #[wasm_bindgen] impl
  --> ui-tests/invalid-methods.rs:19:6
   |
19 | impl &'static A {}
   |      ^^^^^^^^^^

error: const definitions aren't supported with #[wasm_bindgen]
  --> ui-tests/invalid-methods.rs:27:5
   |
27 |     const X: u32 = 3;
   |     ^^^^^^^^^^^^^^^^^

error: type definitions in impls aren't supported with #[wasm_bindgen]
  --> ui-tests/invalid-methods.rs:28:5
   |
28 |     type Y = u32;
   |     ^^^^^^^^^^^^^

error: macros in impls aren't supported
  --> ui-tests/invalid-methods.rs:29:5
   |
29 |     x!();
   |     ^^^^^

error: can only #[wasm_bindgen] non-const functions
  --> ui-tests/invalid-methods.rs:36:9
   |
36 |     pub const fn foo() {}
   |         ^^^^^

warning: unused macro definition: `x`
  --> ui-tests/invalid-methods.rs:21:14
   |
21 | macro_rules! x {
   |              ^
   |
   = note: `#[warn(unused_macros)]` (part of `#[warn(unused)]`) on by default
